--- a/pages/home.html
+++ b/pages/home.html
@@ -100,7 +100,7 @@
         <div class="hero">
           <div class="hero__text-box">
             <h1 class="hero__text-box__primary">Quality Trees, Shrubs and More</h1>
-            <span class="hero__text-box__tag-title">Family Owned Since 1945</span>
+            <h3 class="hero__text-box__tag-title">Family Owned <span>Since 1945</span></h3>
             <div class="hero__text-box__description">
             <p class="hero__text-box__description__paragraph">
               <span>Stuart Nursery</span> provides quality tree sales and installation
@@ -150,165 +150,97 @@
 
           <div class="services__gallery container-medium">
 
-              <div class="card">
-                <div class="card__item">
-                  <div class="card__img">
+              <div class="gallery">
+                <div class="gallery__item">
+                  <div class="gallery__img">
                     <a href="#">
-                      <img src="../images/services/photo_1.jpg" alt="" />
+                      <img src="../images/services/photo_1.jpg" alt="Tree Sales" />
                     </a>
                   </div>
-                  <div class="card__content">
+                  <div class="gallery__content">
                     <a href="#">Tree Sales</a>
                   </div>
                 </div>
               </div>
-
-              <div class="card">
-                <div class="card__item">
-                  <div class="card__img">
+              <!--end-->  
+              <div class="gallery">
+                <div class="gallery__item">
+                  <div class="gallery__img">
                     <a href="#">
-                      <img src="../images/services/photo_2.jpg" alt="" />
+                      <img src="../images/services/photo_2.jpg" alt="Flowers" />
                     </a>
                   </div>
-                  <div class="card__content">
+                  <div class="gallery__content">
                     <a href="#">Flowers</a>
                   </div>
                 </div>
               </div>
-              <!--card-end-->
-              <div class="card">
-                <div class="card__item">
-                  <div class="card__img">
+              <!--end-->
+              <div class="gallery">
+                <div class="gallery__item">
+                  <div class="gallery__img">
                     <a href="#">
-                      <img src="../images/services/photo_3.jpg" alt="" />
+                      <img src="../images/services/photo_3.jpg" alt="Shrub" />
                     </a>
                   </div>
-                  <div class="card__content">
+                  <div class="gallery__content">
                     <a href="#">Shrubs</a>
                   </div>
                 </div>
               </div>
-              <!--card-end-->
-              <div class="card">
-                <div class="card__item">
-                  <div class="card__img">
+              <!--end-->
+              <div class="gallery">
+                <div class="gallery__item">
+                  <div class="gallery__img">
                     <a href="#">
-                      <img src="../images/services/photo_4.jpg" alt="" />
+                      <img src="../images/services/photo_4.jpg" alt="Herbs" />
                     </a>
                   </div>
-                  <div class="card__content">
+                  <div class="gallery__content">
                     <a href="#">Herbs</a>
                   </div>
                 </div>
               </div>
-              <!--card-end-->
-              <div class="card">
-                <div class="card__item">
-                  <div class="card__img">
+              <!--end-->
+              <div class="gallery">
+                <div class="gallery__item">
+                  <div class="gallery__img">
                     <a href="#">
-                      <img src="../images/services/photo_5.jpg" alt="" />
+                      <img src="../images/services/photo_5.jpg" alt="Fertilize" />
                     </a>
                   </div>
-                  <div class="card__content">
+                  <div class="gallery__content">
                     <a href="#">Fertilizer</a>
                   </div>
                 </div>
               </div>
-              <!--card-end-->
-              <div class="card">
-                <div class="card__item">
-                  <div class="card__img">
+              <!--end-->
+              <div class="gallery">
+                <div class="gallery__item">
+                  <div class="gallery__img">
                     <a href="#">
-                      <img src="../images/services/photo_6.jpg" alt="" />
+                      <img src="../images/services/photo_6.jpg" alt="Soil and Admendments" />
                     </a>
                   </div>
-                  <div class="card__content">
+                  <div class="gallery__content">
                     <a href="#">Soil & Admendments</a>
                   </div>
                 </div>
               </div>
-              <!--card-end-->
-              <div class="card">
-                <div class="card__item">
-                  <div class="card__img">
+              <!--end-->
+              <div class="gallery">
+                <div class="gallery__item">
+                  <div class="gallery__img">
                     <a href="#">
-                      <img src="../images/services/photo_7.jpg" alt="" />
+                      <img src="../images/services/photo_7.jpg" alt="And More" />
                     </a>
                   </div>
-                  <div class="card__content">
+                  <div class="gallery__content">
                     <a href="#">And More</a>
                   </div>
                 </div>
               </div>
-              <!--
-            
-            <div class="services__gallery__transform">
-              <div class="services__gallery__transform__item">
-                <img src="../images/services/photo_1.jpg"  alt="Tree Sales" />
-                <div class="services__gallery__transform__content">
-                  <span class="services__gallery__transform__content__tag">Tree Sales</span>
-                  <img src="../images/icons/white-button.png" alt="white-button" />
-                </div>
-              </div>
-            </div>
-            <div class="services__gallery__transform">
-              <div class="services__gallery__transform__item">
-                <img src="../images/services/photo_2.jpg"  alt="Flowers" />
-                <div class="services__gallery__transform__content">
-                  <span class="services__gallery__transform__content__tag">Flowers</span>
-                  <img src="../images/icons/white-button.png"  alt="white-button" />
-                </div>
-              </div>
-            </div>
-            <div class="services__gallery__transform">
-              <div class="services__gallery__transform__item">
-                <div class="item__container">
-                <img src="../images/services/photo_3.jpg"   alt="Shrubs" /></div>
-                <div class="services__gallery__transform__content">
-                  <span class="services__gallery__transform__content__tag">Shrubs</span>
-                  <img src="../images/icons/white-button.png"  alt="white-button" />
-                </div>
-              </div>
-            </div>
-            <div class="services__gallery__transform">
-              <div class="services__gallery__transform__item">
-                <img src="../images/services/photo_4.jpg" alt="Herbs" />
-                <div class="services__gallery__transform__content">
-                  <span class="services__gallery__transform__content__tag"> Herbs</span>
-                  <img src="../images/icons/white-button.png"  alt="white-button" />
-                </div>
-              </div>
-            </div>
-            <div class="services__gallery__transform">
-              <div class="services__gallery__transform__item">
-                <img src="../images/services/photo_5.jpg" 
-               alt="Fertilizer" />
-                <div class="services__gallery__transform__content">
-                  <span class="services__gallery__transform__content__tag">Fertilizer</span>
-                  <img src="../images/icons/white-button.png"  alt="white-button" />
-                </div>
-              </div>
-            </div>
-            <div class="services__gallery__transform">
-              <div class="services__gallery__transform__item">
-                <img src="../images/services/photo_6.jpg"   alt="Soil & Admendments" />
-                <div class="services__gallery__transform__content">
-                  <span class="services__gallery__transform__content__tag">Soil & Admendments</span>
-                  <img src="../images/icons/white-button.png"  alt="white-button" />
-                </div>
-              </div>
-            </div>
-            <div class="services__gallery__transform">
-              <div class="services__gallery__transform__item">
-                <img src="../images/services/photo_7.jpg"  alt="And More Nature" />
-                <div class="services__gallery__transform__content">
-                  <span class="services__gallery__transform__content__tag">And More</span>
-                  <img src="../images/icons/white-button.png"  alt="white-button" />
-                </div>
-              </div>
-            </div>
-            </div>
-            -->
+            <!--end-->
 
           </div>
       </section>
